public/css/posts.css
/* css styling for main app homepage
 */

 /* post classes */
.panel-title {
    text-align: center;
}

.panel-body {
    word-wrap:break-word;
}

.panel-custom {
 border-color: #E7C4F3;
}

.panel-custom > .panel-heading {
  background-image: -webkit-linear-gradient(top, #EAD9F7 0%, #E7C4F3 100%);
  background-image: linear-gradient(to bottom, #EAD9F7 0%, #E7C4F3 100%);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd9edf7', endColorstr='#ffc4e3f3', GradientType=0);
 	border-color: #E7C4F3;
}

.panel-footer {
  text-align: right;
}

.postSnippet {
	position: static;
 }

.postFull {
	opacity: 1.0;
	margin-top: 20%;
	margin-left: auto;
	margin-right: auto;
	width: 90%;
 }
 

 #popup_container_panel {
	padding-top: 70px; 
	width: 100%;
	height: 100%;
	opacity: .95;
	top: 0;
	left: 0;
	display: none;
	position: fixed;
	background-color: rgba(0,0,0,0.5);
	overflow: auto;
}

 /*  new post page */
form {
	width: 100%;
	height: 100%;
	padding:10px 50px;
	border:2px solid gray;
	border-radius:10px;
	/*font-family:raleway;*/
	background-color:#fff;
}

#popup_container_form {
	padding-top: 70px; 
	width: 100%;
	height: 100%;
	opacity: .95;
	top: 0;
	left: 0;
	display: none;
	position: fixed;
	background-color: rgba(0,0,0,0.5);
	overflow: auto
}

#newpost_form {
	position:absolute;
	width: 90%;
	left: 5%;
	height: 80%;
	top: 10%;
	/*font-family:'Raleway',sans-serif */
}

textarea {
	width:99%;
	height: 60%;
	margin-top:30px;
	border:1px solid #ccc;
	font-size:16px;
	/*font-family:raleway; */
	margin-bottom:30px;
}

